FILE(GLOB PY_FILES *.py)
FILE(GLOB UI_FILES *.ui)
FILE(GLOB ICON ./icons/icon.png)

PYQT4_WRAP_UI(PYUI_FILES ${UI_FILES})
PYQT4_ADD_RESOURCES(PYRC_FILES resources.qrc)

ADD_CUSTOM_TARGET(elevator ALL DEPENDS ${PYUI_FILES} ${PYRC_FILES})

SET(INSTALLER_FILES ${PY_FILES} ${PYUI_FILES} ${PYRC_FILES})

INSTALL(FILES ${INSTALLER_FILES} ${SCRIPT_FILES} DESTINATION ${QGIS_DATA_DIR}/python/plugins/elevator)
INSTALL(FILES ${ICON} DESTINATION ${QGIS_DATA_DIR}/python/plugins/elevator/)