FILE(GLOB INSTALLER_FILES *.py)
FILE(GLOB GUI_FILES *.ui)

PYQT4_WRAP_UI(PYGUI_FILES ${GUI_FILES})
PYQT4_ADD_RESOURCES(PYREC_FILES resources.qrc)
SET(INSTALLER_FILES ${INSTALLER_FILES} ${PYGUI_FILES} ${PYREC_FILES})
ADD_CUSTOM_TARGET(sumbandilasat_processor ALL DEPENDS ${PYGUI_FILES} ${PYREC_FILES})

INSTALL(FILES ${INSTALLER_FILES} DESTINATION ${QGIS_DATA_DIR}/python/plugins/sumbandilasat)

SUBDIRS(tools icons)

